fix extra space on top of logo

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -13,7 +13,7 @@
 }
 
 #banner {
-    margin: 2% 0;
+    margin-bottom: 2%;
     width: 60%;
 }
 
